tofu/modules/k8s-lab-libvirt/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: argocd.local.tylerc.me
    name: argocd-http
    port: 80
    protocol: HTTP
  - hostname: argocd.local.tylerc.me
    name: argocd-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
        - kind: Secret
          name: argocd-server-tls
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
  - argocd.local.tylerc.me
  parentRefs:
  - name: argocd
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
